--- a/DatabaseProject/WebContent/html/productpage.html
+++ b/DatabaseProject/WebContent/html/productpage.html
@@ -1,6 +1,3 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-	pageEncoding="ISO-8859-1"%>
 <!DOCTYPE html>
 <html>
 
@@ -15,43 +12,17 @@
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <style>
-.container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
 table {
-	width: 800px;
 	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-}
+	background-color: white;
+	border:1px solid black;
+	box-shadow: 0 15px 25px rgba(0,0,0,.5);
+    border-radius: 10px;
+    border-color: #fff;
 
-th,
-td {
-	padding: 15px;
-	background-color: rgba(255,255,255,0.2);
-	color: #fff;
 }
-
-th {
-	text-align: left;
-}
-
 thead {
-	th {
-		background-color: #55608f;
-	}
-}
-
-tbody {
-	tr {
-		&:hover {
-			background-color: rgba(255,255,255,0.3);
-		}
-	}
+	background-color: tomato;
 }
 body {
 	color: #000000;
@@ -63,6 +34,7 @@ body {
 	margin-height: 0;
 	background-color: #A3A6BA;
 	text-align: center;
+	background: url("https://image.shutterstock.com/z/stock-vector-ecommerce-online-service-pattern-background-design-style-and-color-outline-icons-web-shopping-623616830.jpg");
 }
 p {
 	background-color: DodgerBlue;
@@ -72,14 +44,23 @@ p {
 	margin-right: auto;
 	box-shadow: 3px 5px 9px 1px black;
 }
+tbody tr:hover {
+	background-color: rgba(25,25,25,0.3);
+}
 .button {
-	background-color: #8a4caf;
-	border: none;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
+	margin-top: 10px;
+	margin-left: 80px;
+	background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    /*background: #03a9f4;*/
+    background-color: #28a745;
+    background-image: linear-gradient(-180deg,#34d058,#28a745 90%);
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 35%;
 }
 form {
 	margin: auto;
@@ -174,11 +155,23 @@ input {
 	filter: blur(2px);
 	-webkit-filter: blur(2px);
 }
+.form-group {
+	position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    padding: 40px;
+    background: rgba(0,0,0,.7);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0,0,0,.5);
+    border-radius: 10px;
+}
 .inputBox {
-    position: relative;
+	position: relative;
 }
 .inputBox input {
-    width: 100%;
+	width: 100%;
     padding: 10px 0;
     font-size: 16px;
     color: #fff;
@@ -198,14 +191,89 @@ input {
     pointer-events: none;
     transition: .5s; 
 }
-.inputBox input:focus ~ label,
-.inputBox input:valid ~ label {
+input:focus ~ label,
+input:valid ~ label {
     top: -20px;
     left: 0;
     color: #03a9f4;
     font-size: 12px;
 }
-
+.myButton1 {
+	-moz-box-shadow: 0px 0px 0px 0px #3dc21b;
+	-webkit-box-shadow: 0px 0px 0px 0px #3dc21b;
+	box-shadow: 0px 0px 0px 0px #3dc21b;
+	background-color:#44c767;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:3px 10px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton1:hover {
+	background-color:#5cbf2a;
+}
+.myButton1:active {
+	position:relative;
+	top:1px;
+}
+.myButton2 {
+	-moz-box-shadow: 0px 0px 0px 0px #3dc21b;
+	-webkit-box-shadow: 0px 0px 0px 0px #3dc21b;
+	box-shadow: 0px 0px 0px 0px #3dc21b;
+	background-color:#0e69e8;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:3px 10px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton2:hover {
+	background-color:#0655c4;
+}
+.myButton2:active {
+	position:relative;
+	top:1px;
+}
+.myButton3 {
+	-moz-box-shadow: 0px 0px 0px 0px #3dc21b;
+	-webkit-box-shadow: 0px 0px 0px 0px #3dc21b;
+	box-shadow: 0px 0px 0px 0px #3dc21b;
+	background-color:#d64b3e;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:3px 10px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton3:hover {
+	background-color:#d63829;
+}
+.myButton3:active {
+	position:relative;
+	top:1px;
+}
+}
 </style>
 </head>
 <body>
@@ -232,82 +300,50 @@ input {
 				<th>Actions</th>
 				<th>Buy</th>
 			</thead>
-			<%@page import="com.godrej.model.Product"%>
-			<%@page import="com.godrej.service.ProductService"%>
-			<%@page import="com.godrej.serviceimpl.ProductServiceImpl"%>
-			<%@page import="java.util.ArrayList"%>
-			<%@page import="com.godrej.util.DbConnection"%>
-			<%@page import="java.sql.*"%>
-			<%
-				
-			/*ArrayList<Product> list = new ArrayList<Product>(pdtService.getList());
-				 for (Product i : list) {
-					out.print("<tr>");
-					out.print("<td>" + i.getProduct_Id() + "</td>");
-					out.print("<td>" + i.getProduct_Name() + "</td>");
-					out.print("<td>" + i.getProduct_Cat() + "</td>");
-					out.print("<td>" + i.getProduct_Price() + "</td>");
-					out.print("<td><button id='updateButton' style='margin-right:16px' type='submit' class='btn-primary' onclick='openForm("
-							+ i.getProduct_Id() + ")'>Update</button>");
-					out.print("<td><button id='addButton' style='margin-right:16px' type='submit' class='btn-success' onclick='addPdt("
-							+ i.getProduct_Id() + ")'>Update</button>");
-					out.print("<button id='deleteButton'  type='button' class='btn-danger' onclick='pDelete(" + i.getProduct_Id()
-							+ ")'>Delete</button><br></td></tr>");
-				} */
-				out.print("<tr>");
-				Statement stmt = null;
-				Connection conn = null;
-				int ctr = 1;
-				try{
-				 	DbConnection util = new DbConnection();
-					conn = util.getConn();
-					stmt = conn.createStatement();
-					ResultSet rs = stmt.executeQuery("select * from Product ORDER BY PID ASC");
-					while (rs.next()) {
-						out.print("<td>" + rs.getInt("PID") + "</td>");
-						out.print("<td>" + rs.getString("NAME") + "</td>");
-						out.print("<td>" + rs.getString("CATEGORY") + "</td>");
-						out.print("<td>" + rs.getInt("PRICE") + "</td>");
-						out.print("<td><button id='updateButton' style='margin-right:16px' type='submit' class='btn-primary' onclick='openForm("
-										+ ctr + ")'>Update</button>");
-						out.print("<button id='deleteButton'  type='button' class='btn-danger' onclick='pDelete("
-								+ rs.getInt("PID") + ")'>Delete</button><br></td>");
-							out.print("<td><button id='buyButton'  type='button' class='btn-success' onclick='PdtBuyLocal("
-									+ rs.getInt("PID") + ")'>Purchase</button></td>");
-						out.print("</tr>");
-						ctr++;
-					}
-				}catch (Exception e) {
-					e.printStackTrace();
-				} finally {
-					try {
-						if (conn != null) {
-							conn.close();
-						}
-						if (stmt != null) {
-							stmt.close();
-						}
-					} catch (Exception e) {
-						e.printStackTrace();
-					}
-				}
-			%>
+			
+			<tr>
+					<td>" + i.getProduct_Id() + "</td>
+					<td>" + i.getProduct_Name() + "</td>
+					<td>" + i.getProduct_Cat() + "</td>
+					<td>" + i.getProduct_Price() + "</td>
+					<td><button id='updateButton' style='margin-right:16px' type='submit' class='myButton1' onclick='openForm("
+							+ i.getProduct_Id() + ")'>Update</button>
+					<td><button id='addButton' style='margin-right:16px' type='submit' class='myButton1' onclick='addPdt("
+							+ i.getProduct_Id() + ")'>Update</button>
+					<button id='deleteButton'  type='button' class='myButton3' onclick='pDelete(" + i.getProduct_Id()
+							+ ")'>Delete</button><br></td></tr>
+				<tr>
+				<td>" + rs.getInt("PID") + "</td>
+						<td>" + rs.getString("NAME") + "</td>
+						<td>" + rs.getString("CATEGORY") + "</td>
+						<td>" + rs.getInt("PRICE") + "</td>
+						<td><button id='updateButton' style='margin-right:16px' type='submit' class='myButton1' onclick='openForm("
+										+ ctr + ")'>Update</button>
+						<button id='deleteButton'  type='button' class='myButton3' onclick='pDelete("
+								+ rs.getInt("PID") + ")'>Delete</button><br></td>
+							<td><button id='buyButton'  type='button' class='myButton2' onclick='PdtBuyLocal("
+									+ rs.getInt("PID") + ")'>Purchase</button></td>
+						</tr>
 
 			</tbody>
 		</table>
 
-		<br> <br>
+		<br> <br><br><br><br><br><br><br><br><br><br><br>
 
 		<div class="row">
 			<div align="left" class="col-md">
 				<form method="post" onsubmit="return validateForm()">
+					<div class="form-group">
+					<form>
 					<!-- <label>ID : <input type="text" name="serialIn" id="serialIn"></label> <br> -->
-					<label>Name : </label> <input type="text" name="nameIn" id="nameIn"> <br>
-					<label>Category : </label> <input type="text" name="catIn" id="catIn"><br>
-					<label>Price : </label> <input type="text" name="priceIn" id="priceIn">
-					<br>
-					<button type="submit" class="button" formaction="PdtAdd">CREATE</button>
-					<br> <br> <br>
+						<div class="inputBox"> <input type="text" name="nameIn" id="nameIn" required=""><label>Name  </label></div> <br>
+						<div class="inputBox"> <input type="text" name="catIn" id="catIn" required=""><label>Category  </label></div><br>
+						<div class="inputBox"> <input type="text" name="priceIn" id="priceIn" required=""><label>Price  </label></div>
+						<br>
+						<button type="submit" class="button" formaction="PdtAdd">Create</button>
+						<br> <br> <br>
+						</form>
+					</div>
 				</form>
 			</div>
 		</div>
